--- a/AppFilRougeLibrary/FilRouge.Model/App.config
+++ b/AppFilRougeLibrary/FilRouge.Model/App.config
@@ -36,12 +36,12 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="ConnexionStringFilRouge" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=FilRouge;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="ConnexionStringFilRouge" connectionString="Data Source=localhost;Initial Catalog=FilRouge;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
