--- a/AppFilRougeLibrary/FilRouge.Service/FilRouge.Service.csproj
+++ b/AppFilRougeLibrary/FilRouge.Service/FilRouge.Service.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IReferenceService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuizzExceptions.cs" />
     <Compile Include="QuizzService.cs" />
