--- a/AppFilRougeLibrary/FilRouge.API/packages.config
+++ b/AppFilRougeLibrary/FilRouge.API/packages.config
@@ -56,6 +56,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Twitter" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Twitter.fr" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.2" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
