--- a/AppFilRougeLibrary/FilRouge.Model/FilRouge.Model.csproj
+++ b/AppFilRougeLibrary/FilRouge.Model/FilRouge.Model.csproj
@@ -115,6 +115,10 @@
     <Compile Include="Migrations\201804161122499_FilRouge_v1.Designer.cs">
       <DependentUpon>201804161122499_FilRouge_v1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804170940262_FilRouge_v2.1.cs" />
+    <Compile Include="Migrations\201804170940262_FilRouge_v2.1.Designer.cs">
+      <DependentUpon>201804170940262_FilRouge_v2.1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -125,6 +129,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201804161122499_FilRouge_v1.resx">
       <DependentUpon>201804161122499_FilRouge_v1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804170940262_FilRouge_v2.1.resx">
+      <DependentUpon>201804170940262_FilRouge_v2.1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
