--- a/AppFilRougeLibrary/FilRouge.Model/FilRouge.Model.csproj
+++ b/AppFilRougeLibrary/FilRouge.Model/FilRouge.Model.csproj
@@ -108,21 +108,25 @@
     <Compile Include="Entities\Response.cs" />
     <Compile Include="Entities\Technology.cs" />
     <Compile Include="Entities\UserReponse.cs" />
+    <Compile Include="Interfaces\IQuestionResponseService.cs" />
+    <Compile Include="Interfaces\IQuizzService.cs" />
     <Compile Include="Interfaces\IReferenceService.cs" />
-    <Compile Include="Migrations\201804161122499_FilRouge_v1.cs" />
-    <Compile Include="Migrations\201804161122499_FilRouge_v1.Designer.cs">
-      <DependentUpon>201804161122499_FilRouge_v1.cs</DependentUpon>
+    <Compile Include="Migrations\201804171008213_migration.cs" />
+    <Compile Include="Migrations\201804171008213_migration.Designer.cs">
+      <DependentUpon>201804171008213_migration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201804161122499_FilRouge_v1.resx">
-      <DependentUpon>201804161122499_FilRouge_v1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201804171008213_migration.resx">
+      <DependentUpon>201804171008213_migration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
