--- a/AppFilRougeLibrary/FilRouge.Web/Web.config
+++ b/AppFilRougeLibrary/FilRouge.Web/Web.config
@@ -87,6 +87,6 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="ConnexionStringFilRouge" connectionString="Data Source=localhost/SQLEXPRESS;Initial Catalog=FilRouge;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="ConnexionStringFilRouge" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=FilRouge;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
