--- a/AppFilRougeLibrary/FilRouge.Model/FilRouge.Model.csproj
+++ b/AppFilRougeLibrary/FilRouge.Model/FilRouge.Model.csproj
@@ -113,6 +113,10 @@
     <Compile Include="Migrations\201804171013533_17_04.Designer.cs">
       <DependentUpon>201804171013533_17_04.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804182221260_18_04.cs" />
+    <Compile Include="Migrations\201804182221260_18_04.Designer.cs">
+      <DependentUpon>201804182221260_18_04.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -123,6 +127,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201804171013533_17_04.resx">
       <DependentUpon>201804171013533_17_04.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804182221260_18_04.resx">
+      <DependentUpon>201804182221260_18_04.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
