--- a/AppFilRougeLibrary/FilRouge.Web/FilRouge.Web.csproj
+++ b/AppFilRougeLibrary/FilRouge.Web/FilRouge.Web.csproj
@@ -282,6 +282,7 @@
     <Content Include="Views\Quizz\Index.cshtml" />
     <Content Include="Views\Quizz\_question.cshtml" />
     <Content Include="Views\Question\Details.cshtml" />
+    <Content Include="Views\Question\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
