--- a/AppFilRougeLibrary/FilRouge.Service/FilRouge.Service.csproj
+++ b/AppFilRougeLibrary/FilRouge.Service/FilRouge.Service.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionResponseService.cs" />
     <Compile Include="QuizzExceptions.cs" />
     <Compile Include="QuizzService.cs" />
     <Compile Include="ReferencesService.cs" />
