--- a/AppFilRougeLibrary/FilRouge.Web/FilRouge.Web.csproj
+++ b/AppFilRougeLibrary/FilRouge.Web/FilRouge.Web.csproj
@@ -213,6 +213,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\QuestionModel.cs" />
+    <Compile Include="Models\QuestionQuizzModel.cs" />
     <Compile Include="Models\QuizzModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
