Création de tests unitaires, optimisation de la console de test et création de la classe d'extention pour les services

--- a/AppFilRougeLibrary/FilRouge.Service/FilRouge.Service.csproj
+++ b/AppFilRougeLibrary/FilRouge.Service/FilRouge.Service.csproj
@@ -85,6 +85,7 @@
     <Compile Include="QuizzExceptions.cs" />
     <Compile Include="QuizzService.cs" />
     <Compile Include="ReferencesService.cs" />
+    <Compile Include="ServiceExtention.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
