--- a/AppFilRougeLibrary/FilRouge.API/FilRouge.API.csproj
+++ b/AppFilRougeLibrary/FilRouge.API/FilRouge.API.csproj
@@ -262,6 +262,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\QuestionModel.cs" />
     <Compile Include="Models\QuizzModel.cs" />
+    <Compile Include="Models\TechnologyModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
